--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+body{
+  height:100vh;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Movie{
+  width: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: 10px solid black;
+}
+.poster{
+  
+  height: 270px;
+  width: 200px;
+}
+.App{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap:30px;
 }
 
-.App-link {
-  color: #61dafb;
+h3{
+  margin:0px;
+  text-align: center;
+}
+.main{
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.addMovie{
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: auto;
+  gap:10px;
+  margin-bottom: 2rem;
+  font-family: 'Urbanist', sans-serif;
+  font-weight: 700;
+}
+button{
+  width:30%;
+  margin: auto;
+  font-family: 'Urbanist', sans-serif;
+  font-weight: 700;
 }
