--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,16 @@
 body{
   height:100vh;
+  background-color: black;
+  color: white;
 }
 .Movie{
-  width: 30%;
+  width: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 10px solid black;
+  box-shadow: 0px 0px 5px white;
+  padding: 10px;
+  border-radius: 10px;
 }
 .poster{
   height: 270px;
@@ -17,6 +21,7 @@ body{
   flex-direction: row;
   flex-wrap: wrap;
   gap:30px;
+  justify-content: space-evenly;
 }
 
 h3{
@@ -35,6 +40,7 @@ h3{
   align-items: stretch;
   width:50%;
   margin: auto;
+  margin-bottom: 20px;
 
 }
 .movieButton{
