--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body{
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: 0px 0px 5px white;
+  /* box-shadow: 0px 0px 5px white; */
   padding: 10px;
   border-radius: 10px;
 }
@@ -21,6 +21,7 @@ body{
   flex-wrap: wrap;
   gap:30px;
   justify-content: space-evenly;
+  margin-top: 20px;
 }
 
 h3{
@@ -66,13 +67,12 @@ h3{
 .toolbar > a{
   text-decoration: none;
   font-weight: bold;
-  margin-right: 15px;
-  
-  color: black;
+  margin-right: 20px;
+  color: white;
+  display: flex;
+  align-items: center;
 }
-.toolbar{
-  background-color: whitesmoke;
-}
+
 
 .description{
   display: flex;
